form-builder/src/app/pages/form-creator/info-page/info-page.component.less
@import '../../../../breakpoints.less';
@import '../../../../colors.less';
@import '../../../../common.less';

nz-layout {
  background-color: @transparent;
  display: flex;
  flex-direction: column;
  padding: 0 @spacing32;
}

.formelement {
  margin-bottom: @spacing32;
  width: @width-full;
}

#switch {
  margin-left: @spacing12;
  margin-right: @spacing12;
}

#title,
#description {
  font-size: 20px;
  border-radius: 10px;
  border-width: 2px;
  margin-top: -5px;
  width: @width-full;
  box-sizing: border-box;
}

#title {
  margin-bottom: @spacing12;
}

.description-label,
.title-label {
  font-weight: bold;
}

.date-picker {
  margin-top: -5px;
}

.saveBtn {
  float: left;
}

.error-message {
  margin-top: 5px;
  color: @accent-danger;
  font-size: 12px;
  font-weight: bold;
}

.input-error {
  border: @border-default;
}

.same_line {
  display: flex;
  align-items: center;
  gap: @spacing12;
  flex-wrap: wrap;
}

.icon-margin-small {
  margin-left: 5px;
}

.icon-margin-medium {
  margin-left: @spacing12;
}

@media (max-width: @breakpoint-lg) {
  nz-layout {
    padding: @spacing0 @spacing20;
  }

  .formelement {
    margin-bottom: @spacing20;
  }

  #title,
  #description {
    font-size: 18px;
  }

  .saveBtn {
    float: none;
    margin-top: @spacing12;
  }
}

@media (max-width: @breakpoint-md) {
  nz-layout {
    padding: @spacing0 @spacing16;
  }

  #title,
  #description {
    font-size: 16px;
  }
  .formelement {
    margin-bottom: @spacing16;
  }

  .same_line {
    flex-direction: column;
    align-items: flex-start;
  }

  .saveBtn {
    float: none;
    width: @width-full;
    margin-top: @spacing16;
  }
}

@media (max-width: @breakpoint-xs) {
  nz-layout {
    padding: @spacing0 @spacing12;
  }

  #title,
  #description {
    font-size: 14px;
  }

  .formelement {
    margin-bottom: @spacing12;
  }

  .saveBtn {
    width: @width-full;
    font-size: 14px;
  }
}

